[Misc] Code improvements and new tests